--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "preview": "vite preview"
   },
   "devDependencies": {
-    "typescript": "~5.6.2",
-    "vite": "^5.4.10"
+    "typescript": "*",
+    "vite": "*",
+    "sass-embedded": "*"
   }
 }
