--- a/package.json
+++ b/package.json
@@ -7,13 +7,11 @@
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
-    "preview": "vite preview",
-    "deploy": "npm run build && gh-pages -d dist"
+    "preview": "vite preview"
   },
   "devDependencies": {
     "typescript": "*",
     "vite": "*",
-    "sass-embedded": "*",
-    "gh-pages": "*"
+    "sass-embedded": "*"
   }
 }
